💫 created ednpoint for analytics
